finished lists assignment, as well as the links and images assignment

--- a/html-list-assignment/index.html
+++ b/html-list-assignment/index.html
@@ -36,8 +36,16 @@
             <li>Greece</li>
         </ol>
 
-        <!-- An ordered list of your all time top 5 favortie video games or movies -->
-
+        <!-- An ordered list of your all time top 5 favorite video games or movies -->
+        <h2>My Top 5 Favorite Video Games</h2>
+        <ol>
+            <li>Kerbal Space Program</li>
+            <li>Factorio</li>
+            <li>Persona 3</li>
+            <li>Titanfall 2</li>
+            <li>Fallout: New Vegas</li>
+        </ol>
+        <p>I would add more, but these are solid games.</p>
 
     </body>
 </html>
